syntax = "proto3";

package tsscomm.v1;

option go_package = "github.com/certusone/wormhole/node/pkg/proto/tss/v1;tsscommv1";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";



// DirectLink is used for TSS communications between guardians.
// Since TSS requires reliable broadcast logic
service DirectLink {
    // Send uses a stream since the clients of this RPC will invoke it multiple times throughout the life of the server.
    rpc Send(stream PropagatedMessage) returns (google.protobuf.Empty);
}

// copyOfTssLib proto.
message PartyId{
  string id = 1;
  string moniker = 2;
  bytes key = 3;
  uint32 index = 4;
}

message TssContent{
  bytes payload = 1; 
  uint64 msg_serial_number = 2;
}

message Problem {
  uint32 ChainID = 1;

  // made to ensure this message is not reused.
  google.protobuf.Timestamp IssuingTime = 3;
}

// used by guardians to state to others that they have seen some digest on some chain.
// important for FT
message SawDigest{
  bytes Digest = 1;
  uint32 ChainID = 2;
}

// SignedMessage is the content of a broadcast message. It may be echoed and as a result requires a signature.
message SignedMessage {
  PartyId sender = 1;
  bytes signature = 2;

  oneof content {
    TssContent tss_content = 3;
    Problem problem = 4;
    SawDigest announcement = 5;
  };
}

// Echo is a message explicitly used by the Reliable Broadcast protocol.
message Echo {
  SignedMessage message = 1;
}

message Unicast{
  TssContent content = 1;
}

message fault{

}
// PropagatedMessage is a message that is sent across the network,
// either to a specific recipient or all nodes (using reliable broadcast).
message PropagatedMessage {
  oneof Message{
    Unicast Unicast = 1;
    Echo Echo = 2;
  }
}